@@ -34,6 +34,8 @@ struct fd_queue_info_t
     apr_thread_cond_t *wait_for_idler;
     int terminated;
     int max_idlers;
+    int max_recycled_pools;
+    apr_uint32_t recycled_pools_count;
     recycled_pool *recycled_pools;
 };
 
@@ -60,7 +62,8 @@ static apr_status_t queue_info_cleanup(void *data_)
 }
 
 apr_status_t ap_queue_info_create(fd_queue_info_t ** queue_info,
-                                  apr_pool_t * pool, int max_idlers)
+                                  apr_pool_t * pool, int max_idlers,
+                                  int max_recycled_pools)
 {
     apr_status_t rv;
     fd_queue_info_t *qi;
@@ -77,6 +80,7 @@ apr_status_t ap_queue_info_create(fd_queue_info_t ** queue_info,
         return rv;
     }
     qi->recycled_pools = NULL;
+    qi->max_recycled_pools = max_recycled_pools;
     qi->max_idlers = max_idlers;
     apr_pool_cleanup_register(pool, qi, queue_info_cleanup,
                               apr_pool_cleanup_null);
@@ -191,29 +195,36 @@ apr_status_t ap_queue_info_wait_for_idler(fd_queue_info_t * queue_info)
 void ap_push_pool(fd_queue_info_t * queue_info,
                                     apr_pool_t * pool_to_recycle)
 {
+    struct recycled_pool *new_recycle;
     /* If we have been given a pool to recycle, atomically link
      * it into the queue_info's list of recycled pools
      */
-    if (pool_to_recycle) {
-        struct recycled_pool *new_recycle;
-        new_recycle = (struct recycled_pool *) apr_palloc(pool_to_recycle,
-                                                          sizeof
-                                                          (*new_recycle));
-        new_recycle->pool = pool_to_recycle;
-        for (;;) {
-            /*
-             * Save queue_info->recycled_pool in local variable next because
-             * new_recycle->next can be changed after apr_atomic_casptr
-             * function call. For gory details see PR 44402.
-             */
-            struct recycled_pool *next = queue_info->recycled_pools;
-            new_recycle->next = next;
-            if (apr_atomic_casptr
-                ((void*) &(queue_info->recycled_pools),
-                 new_recycle, next) == next) {
-                break;
-            }
+    if (!pool_to_recycle)
+        return;
+
+    if (queue_info->max_recycled_pools >= 0) {
+        apr_uint32_t cnt = apr_atomic_read32(&queue_info->recycled_pools_count);
+        if (cnt >= queue_info->max_recycled_pools) {
+            apr_pool_destroy(pool_to_recycle);
+            return;
         }
+        apr_atomic_inc32(&queue_info->recycled_pools_count);
+    }
+
+    new_recycle = (struct recycled_pool *) apr_palloc(pool_to_recycle,
+                                                      sizeof (*new_recycle));
+    new_recycle->pool = pool_to_recycle;
+    for (;;) {
+        /*
+         * Save queue_info->recycled_pool in local variable next because
+         * new_recycle->next can be changed after apr_atomic_casptr
+         * function call. For gory details see PR 44402.
+         */
+        struct recycled_pool *next = queue_info->recycled_pools;
+        new_recycle->next = next;
+        if (apr_atomic_casptr((void*) &(queue_info->recycled_pools),
+                              new_recycle, next) == next)
+            break;
     }
 }
 
@@ -241,6 +252,8 @@ void ap_pop_pool(apr_pool_t ** recycled_pool, fd_queue_info_t * queue_info)
             ((void*) &(queue_info->recycled_pools),
              first_pool->next, first_pool) == first_pool) {
             *recycled_pool = first_pool->pool;
+            if (queue_info->max_recycled_pools >= 0)
+                apr_atomic_dec32(&queue_info->recycled_pools_count);
             break;
         }
     }
